<resources>
    <string name="app_name">HTTrack Website Copier</string>
    <string name="title_activity_startup">HTTrack Website Copier</string>
    <string name="title_activity_cleanup">Delete</string>
    <string name="action_settings">Options</string>
    <string name="welcome_message">Welcome to HTTrack Website Copier!\n\nPlease click on the NEXT button to\n\n- start a new project\n- or resume a partial download</string>
    <string name="tab_next">Next</string>
    <string name="title_activity_proj_name">New project</string>
    <string name="project_name">Project name</string>
    <string name="projname_hint">My Website</string>
    <string name="project_category">Project category</string>
    <string name="hint_category">Funny Sites</string>
    <string name="title_activity_proj_setup">URL and Settings</string>
    <string name="previous">Previous</string>
    <string name="start">Start</string>
    <string name="web_addresses">Web Addresses: (URL)</string>
    <string name="hint_addresses">http://www.example.com/funny/</string>
    <string name="options">Options</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Exit</string>
    <string name="exit">Exit</string>
    <string name="show_logs">View log</string>
    <string name="browse_website">Browse Mirrored Website</string>
    <string name="app_description">Website Copier/Offline Browser. Copy remote websites to your computer. Free.</string>
    <string name="browse_all">Browse sites</string>
    <string name="tab_new">New project…</string>
    <string name="cleanup_sites">Delete…</string>
    <string name="delete">Delete</string>
    <string name="title_activity_options">Options</string>
    <string name="exclude_links">Exclude links</string>
    <string name="include_links">Include link(s)</string>
    <string name="scan_rules_details">Use wildcards to exclude or include URLs or links.\nYou can put several scan strings on the same line.\nUse spaces as separators.\n\nExample: +*.zip -www.*.com -www.*.edu/cgi-bin/*.cgi</string>
    <string name="max_depth">Maximum link scanning depth</string>
    <string name="max_ext_depth">Maximum external depth</string>
    <string name="maxSizeHtml">Max size of any HTML file (B)</string>
    <string name="maxSizeOther">Max size of any non-HTML file</string>
    <string name="siteSizeLimit">Max site size</string>
    <string name="max_time_overall">Max time</string>
    <string name="max_transfer_rate">Max transfer rate</string>
    <string name="max_connections_seconds">Max connections / seconds</string>
    <string name="max_number_links">Maximum number of links</string>
    <string name="detect_all_links">Try to catch all URLs (even in unknown tags/code)</string>
    <string name="get_non_html_near">Get non-HTML files related to a link, eg external .ZIP or pictures</string>
    <string name="test_all_links">Test all links (even forbidden ones)</string>
    <string name="get_html_first">Get HTML files first!</string>
    <string name="local_structure_type">Structure type (how links are saved)</string>
    <string name="build_type_1">Site-structure (default)</string>
    <string name="build_type_2">Html in web/, images/other files in web/images/</string>
    <string name="build_type_3">Html in web/html, images/other in web/images</string>
    <string name="build_type_4">Html in web/, images/other in web/</string>
    <string name="build_type_5">Html in web/, images/other in web/xxx, where xxx is the file extension</string>
    <string name="build_type_6">Html in web/html, images/other in web/xxx</string>
    <string name="build_type_7">Site-structure, without www.domain.xxx/</string>
    <string name="build_type_8">Html in site_name/, images/other files in site_name/images/</string>
    <string name="build_type_9">Html in site_name/html, images/other in site_name/images</string>
    <string name="build_type_10">Html in site_name/, images/other in site_name/</string>
    <string name="build_type_11">Html in site_name/, images/other in site_name/xxx</string>
    <string name="build_type_12">Html in site_name/html, images/other in site_name/xxx</string>
    <string name="build_type_13">All files in web/, with random names (gadget !)</string>
    <string name="build_type_14">All files in site_name/, with random names (gadget !)</string>
    <string name="build_type_15">User-defined structure..</string>
    <string name="dos_names">DOS names (8+3)</string>
    <string name="iso9660_names">ISO9660 names (CDROM)</string>
    <string name="no_error_pages">No error pages</string>
    <string name="no_external_pages">No external pages</string>
    <string name="hide_passwords">Hide passwords</string>
    <string name="hide_query_strings">Hide query strings</string>
    <string name="do_not_purge_old_files">Do not purge old files</string>
    <string name="number_of_connections">Max simultaneous connections</string>
    <string name="persistent_connections">Persistent connections (Keep-Alive)</string>
    <string name="timeout">File timeout</string>
    <string name="remove_host_if_timeout">Cancel all links from host if timeout occurs</string>
    <string name="retries">Retries</string>
    <string name="min_transfer_rate">Minimum admissible transfer rate</string>
    <string name="remove_host_if_slow">Cancel all links from host if too slow</string>
    <string name="browser_identity">Browser identity</string>
    <string name="html_footer">HTML footer</string>
    <string name="default_browser_id">Mozilla/4.5 (compatible; HTTrack 3.0x; Windows 98)</string>
    <string name="default_html_footer" formatted="false">&lt;!-- Mirrored from %s%s by HTTrack Website Copier/3.x [XR&amp;CO\'2013], %s --&gt;</string>
    <string name="accept_cookies">Accept cookies</string>
    <string name="check_document_type">Check document type</string>
    <string name="parse_java_files">Parse java files</string>
    <string name="spider">Spider</string>
    <string name="update_hack">Update hack (limit re-transfers)</string>
    <string name="url_hacks">URL hacks (join similar URLs)</string>
    <string name="tolerent_requests">Tolerant requests (for servers)</string>
    <string name="force_http_10">Force old HTTP/1.0 requests (no 1.1)</string>
    <string name="radio_check_document_type_never">Never</string>
    <string name="radio_check_document_type_if_unknown_slash">If unknown (except /)</string>
    <string name="radio_check_document_type_if_unknown">If unknown</string>
    <string name="radio_spider_none">no robots.txt rules</string>
    <string name="radio_spider_except_wizard">robots.txt except wizard</string>
    <string name="radio_spider_always">follow robots.txt rules</string>
    <string name="proxy">Proxy address</string>
    <string name="proxy_port">Proxy port</string>
    <string name="hint_proxy_address">proxy.example.com</string>
    <string name="hint_proxy_port">8080</string>
    <string name="hint_browser_identity">Mozilla/4.5 (compatible; HTTrack 3.0x; Windows 98)</string>
    <string name="hint_footer" formatted="false">&lt;!-- Mirrored from %s%s by HTTrack Website Copier/3.x [XR&amp;CO\'2013], %s --&gt;</string>
    <string name="use_proxy_for_ftp">Use proxy for ftp transfers</string>
    <string name="store_all_files_in_cache">Store ALL files in cache</string>
    <string name="do_not_redownload_locally_erased_files">Do not re-download locally erased files</string>
    <string name="create_log_files">Log files</string>
    <string name="use_index">Make an index</string>
    <string name="verbosity">Log file type (if generated)</string>
    <string name="verbosity_normal">normal</string>
    <string name="verbosity_extended">extended</string>
    <string name="verbosity_debug">debug</string>
    <string name="use_cache_for_updates">Use a cache for updates</string>
    <string name="primary_scan_rule">Primary Scan Rule</string>
    <string name="just_scan">Just scan</string>
    <string name="store_html_files">Store html files</string>
    <string name="store_non_html_files">Store non html files</string>
    <string name="store_all_files">Store all files (default)</string>
    <string name="store_html_files_first">Store html files first</string>
    <string name="travel_mode">Travel mode</string>
    <string name="stay_in_same_directory">Stay in the same directory</string>
    <string name="can_go_down">Can go down (default)</string>
    <string name="can_go_up">Can go up</string>
    <string name="can_go_updown">Can both go up &amp; down</string>
    <string name="global_travel_mode">Global travel mode</string>
    <string name="stay_on_same_address">Stay on the same address (default)</string>
    <string name="stay_on_same_domain">Stay on the same domain</string>
    <string name="stay_on_same_tld">Stay on the same top level domain</string>
    <string name="go_everywhere">Go everywhere on the web</string>
    <string name="rewrite_links">Rewrite links: internal / external</string>
    <string name="rewrite_links_1">Relative URI / Absolute URL (default)</string>
    <string name="rewrite_links_2">Absolute URL / Absolute URL</string>
    <string name="rewrite_links_3">Absolute URI / Absolute URL</string>
    <string name="rewrite_links_4">Original URL / Original URL</string>
    <string name="activate_debugging">Activate Debugging Mode (winhttrack.log)</string>
    <string name="hint_scan_rules">-* +www.example.com/*.html +*.gif +*.png +*.css</string>
    <string name="action_download">Download web site(s)</string>
    <string name="action_continue">Continue interrupted download</string>
    <string name="action_update">Update existing download</string>
    <string name="custom_build">User-defined structure</string>
    <string name="custom_build_hint" formatted="false">%h%p/%n%q.%t</string>
    <string name="help">Help</string>
    <string name="action_help">View Documentation</string>
    <string name="action_about">About HTTrack</string>
    <string name="action_website">Go To HTTrack Website</string>
    <string name="action_forum">Go To HTTrack Forum</string>
    <string name="action_license">View License</string>
    <string name="scan_rules">Scan Rules</string>
    <string name="limits">Limits</string>
    <string name="flow_control">Flow Control</string>
    <string name="links">Links</string>
    <string name="build">Build</string>
    <string name="browser_id">Browser ID</string>
    <string name="log_index_cache">Log, Index, Cache</string>
    <string name="experts_only">Experts Only</string>
    <string name="bytes_saved">Bytes saved</string>
    <string name="links_scanned">Links scanned</string>
    <string name="time">Time</string>
    <string name="files_written">Files written</string>
    <string name="transfer_rate">Transfer rate</string>
    <string name="files_updated">Files updated</string>
    <string name="active_connections">Connections</string>
    <string name="errors">Errors</string>
    <string name="connect">connect</string>
    <string name="ready">ready</string>
    <string name="finishing_pending_transfers">Finishing pending transfers - Select [Cancel] to stop now!</string>
    <string name="abort">ABORT</string>
    <string name="mirror_finished">Site mirroring finished!</string>
    <string name="warning_space_in_filename">Beware: you local browser might be unable to browse files with embedded filenames</string>
    <string name="no_index_html_in_xx">No \'index.html\' file in %s!</string>
    <string name="info_recreated_resources">Recreated HTTrack internal cached resources</string>
    <string name="accept_language">Languages</string>
    <string name="hint_language">en,fr,ja</string>
    <string name="other_headers">Additional HTTP Headers</string>
    <string name="hint_other_headers">X-Magic: 42</string>
    <string name="default_referer">Default referer URL</string>
    <string name="hint_default_referer">http://www.example.com/</string>
</resources>