<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/checkAcceptCookies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/accept_cookies" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textCheckDocumentType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/check_document_type" />

            <RadioGroup
                android:id="@+id/radioCheckDocumentType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50" >

                <RadioButton
                    android:id="@+id/radioItemNever"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_check_document_type_never" />

                <RadioButton
                    android:id="@+id/radioItemIfUnknownSlash"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_check_document_type_if_unknown_slash" />

                <RadioButton
                    android:id="@+id/radioItemIfUnknown"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_check_document_type_if_unknown" />
            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkParseJavaFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/parse_java_files" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textSpider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:text="@string/spider" />

            <RadioGroup
                android:id="@+id/radioSpider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50" >

                <RadioButton
                    android:id="@+id/radioItemNone"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_spider_none" />

                <RadioButton
                    android:id="@+id/radioItemAlwaysExceptWizard"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_spider_except_wizard" />

                <RadioButton
                    android:id="@+id/radioItemAlways"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_spider_always" />
            </RadioGroup>
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkUpdateHacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/update_hack" />

        <CheckBox
            android:id="@+id/checkUrlHacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/url_hacks" />

        <CheckBox
            android:id="@+id/checkTolerentRequests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/tolerent_requests" />

        <CheckBox
            android:id="@+id/checkForceHttp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/force_http_10" />
    </LinearLayout>

</ScrollView>