<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_rings"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <CheckBox
        android:id="@+id/checkStoreAllFilesInCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/store_all_files_in_cache" />

    <CheckBox
        android:id="@+id/checkDoNotRedownloadLocallErasedFiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_not_redownload_locally_erased_files" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkCreateLogFiles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:text="@string/create_log_files" />

        <RadioGroup
            android:id="@+id/radioVerbosity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".50" >

            <RadioButton
                android:id="@+id/radioItemNormal"
                android:layout_height="wrap_content"
                android:text="@string/verbosity_normal" />

            <RadioButton
                android:id="@+id/radioItemExtended"
                android:layout_height="wrap_content"
                android:text="@string/verbosity_extended" />

            <RadioButton
                android:id="@+id/radioItemDebug"
                android:layout_height="wrap_content"
                android:text="@string/verbosity_debug" />
        </RadioGroup>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkUseIndex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_index" />

</LinearLayout>