<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_phone_only"
    android:paddingLeft="@dimen/activity_horizontal_margin_phone_only"
    android:paddingRight="@dimen/activity_horizontal_margin_phone_only"
    android:paddingTop="@dimen/activity_vertical_margin_phone_only" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textBrowserIdentity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/browser_identity" />

            <AutoCompleteTextView
                android:id="@+id/editBrowserIdentity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:hint="@string/hint_browser_identity" >

                <requestFocus />
            </AutoCompleteTextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textHtmlFooter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/html_footer" />

            <AutoCompleteTextView
                android:id="@+id/editHtmlFooter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:hint="@string/hint_footer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textAcceptLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/accept_language" />

            <EditText
                android:id="@+id/editAcceptLanguage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:hint="@string/hint_language"
                android:inputType="textNoSuggestions" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textOtherHeaders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/other_headers" />

            <EditText
                android:id="@+id/editOtherHeaders"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".70"
                android:hint="@string/hint_other_headers"
                android:inputType="textMultiLine|textNoSuggestions"
                android:lines="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textDefaultReferer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".30"
                android:text="@string/default_referer" />

            <EditText
                android:id="@+id/editDefaultReferer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight=".70"
                android:hint="@string/hint_default_referer"
                android:inputType="textNoSuggestions"
                android:lines="2" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>