<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_rings"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <CheckBox
        android:id="@+id/checkDetectAllLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detect_all_links" />

    <CheckBox
        android:id="@+id/checkGetNonHtmlNear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_non_html_near" />

    <CheckBox
        android:id="@+id/checkTestAllLinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_all_links" />

    <CheckBox
        android:id="@+id/checkGetHtmlFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_html_first" />

</LinearLayout>